--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,16 @@
     "description": "Portfolio professionnel avec back-end PHP",
     "type": "project",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "illuminate/database": "^8.0",
+        "illuminate/events": "^8.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Core\\": "core/",
+            "Controllers\\": "controllers/",
+            "Models\\": "models/",
+            "Views\\": "views/"
         }
     },
     "authors": [
