--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "illuminate/database": "^8.0",
-        "illuminate/events": "^8.0"
+        "fakerphp/faker": "^1.23"
     },
     "autoload": {
         "psr-4": {
