ajout de la fonctionnalité de déconnexion, mise à jour de la navigation, et amélioration de la gestion des images et des scripts dans le projet

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-# Composer
+# Dépendances Composer
 /vendor/
 composer.lock
+
+# Images des projets (sauf le fichier .gitkeep)
+/assets/images/projects/*
+!assets/images/projects/.gitkeep
