ajout de la pagination pour le chargement des projets, refactorisation de la logique de récupération des données et ajout d'une classe OutputHelper pour la sanitation des sorties

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tutolabpro/portfolio",
+    "name": "portfolio/backend",
     "description": "Portfolio professionnel avec back-end PHP",
     "type": "project",
     "require": {
@@ -8,10 +8,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Core\\": "core/",
-            "Controllers\\": "controllers/",
-            "Models\\": "models/",
-            "Views\\": "views/"
+            "App\\": "src/"
         }
     },
     "authors": [
